# Q-Agent

./: Plan.md  README.md
brain/d2d2356b-d424-4d84-8995-d29f171a6d9e/scratch/: status_analysis.md
q-agent/: package-lock.json  package.json  svelte-check.json
q-agent/src/: app.css  app.html
q-agent/src-tauri/: Cargo.toml  tauri.conf.json
q-agent/src-tauri/permissions/: main.toml
q-agent/src-tauri/src/: db.rs  lib.rs  main.rs
q-agent/src-tauri/src/commands/: agent.rs  chat.rs  mod.rs  profile.rs  project.rs  rag.rs
q-agent/src-tauri/src/harness/: context_builder.rs  eval_loop.rs  mod.rs  planner.rs  router.rs  summarizer.rs  web_reader.rs
q-agent/src-tauri/src/models/: runner.rs
q-agent/src/lib/components/: ChatBubble.svelte  KnowledgePanel.svelte  ModelExplorerModal.svelte  ModelInstallModal.svelte  ModelPicker.svelte  ProfileSwitcher.svelte  ProjectSwitcher.svelte  SettingsPanel.svelte  Sidebar.svelte  ThinkingPanel.svelte  WidgetPanel.svelte
q-agent/src/lib/data/: models.ts
q-agent/src/lib/stores/: mode.ts  profile.ts  projectStore.ts  ui.ts
q-agent/src/routes/: +layout.svelte  +page.svelte
