[package]
name = "q-agent"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "q_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.32"
surrealdb = { version = "3.0.5", features = ["kv-surrealkv"] }
surrealdb-types = "3"
lopdf = "0.40.0"
scraper = "0.26.0"
regex = "1.12.3"
async-trait = "0.1.89"
tiktoken-rs = "0.6.0"
thiserror = "2.0.11"
readability = "0.2"
htmd = "0.1"
